--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 			<img src="triax.png" alt="triax" style="width:225px;height:302px;">
 			<img src="shiva.jpg" alt="Shiva" style="width:403px;height:302px;">
 		</div>
-			
 		<div class="topnav">
 			<a class="active" href="#home">Home</a>
 			<a href="about_me.html"> About me</a>
@@ -23,5 +22,9 @@
 			<a href="#daq"> Data acquisition</a>
 			<a href="#control"> Interfacing and control</a>
 		</div>
+	<div>
+		<p>
+			Welcome to charbord.com a website where you can view the research activities of Chris Harbord, postdoctoral researcher within the UCL Rock Physics group.
+	</div>
 	</body>
 </html>
