--- a/about_me.html
+++ b/about_me.html
@@ -17,13 +17,21 @@
 			<a href="#daq"> Data acquisition</a>
 			<a href="#control"> Interfacing and control</a>
 		</div>
-		<div><p>
-			I originate from the UK and have lived in various locations around the UK and Rome, Italy. 
-		</p>
+		<div><ul>
+			<li>2010-2014 Geology MESci, University of Liverpool </li>
+			<li>2014-2018 PhD, University of Durham </li>
+			<li>2018-2020 Postdoc, INGV Roma </li>
+			<li>2020-present, Postdoc, UCL </li>
+		</ul>
 		<img src="pers_pic.jpg" style="width:200px;height:140px;">
 	</div>
-			
-			<p> For my undergraduate degree I studied at the University of Liverpool gaining an MESci in Geology. During my time in Liverpool I developed an interest in structural geology and the deformation of rocks. My degreeculminated in a Master's thesis investigating the effects of temperature in calcite friction in Dan Faulkner's lab. It was a great introduction to world of 'rock squashing' and so I decided to take things further by applying for a PhD.
+			<p>
+				Research interests:
+				<ul>
+					<li> The rheology of rocks </li>
+					<li> Microstructures of deformed rock </li>
+					<li> Design, construction and operation of deformation apparatus </li>
+				</ul>
 		</p>
 	</body>
 </html>
