--- a/about_me.html
+++ b/about_me.html
@@ -7,7 +7,8 @@
 		<body style="background-color:#000;">
 	</head>
 	<body>
-		<h1>Chris Harbord | Experimental rock deformation</h1>
+		<h1>Chris Harbord</h1>
+		<h2>Experimental rock deformation</h2>
 		<div class="topnav">
 			<a  href="index.html">Home</a>
 			<a class="active" href="about_me.html"> About me</a>
