--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="topnav">
 			<a class="active" href="#home">Home</a>
 			<a href="about_me.html"> About me</a>
-			<a href="#exp"> Experiments</a>
+			<a href="exps.html"> Experiments</a>
 			<a href="#friction"> Fault friction</a>
 			<a href="#design"> Apparatus design</a>
 			<a href="#daq"> Data acquisition</a>
