--- a/design.html
+++ b/design.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Chris Harbord | Homepage</title>
+		<title>Chris Harbord | Design</title>
 		<link href="StyleSheet.css" rel="stylesheet">
 		<body style="background-color:#000;">
 	</head>
@@ -10,10 +10,10 @@
 			<h1>Chris Harbord</h1>
 			<h2>Experimental rock deformation</h2>
 			<div class="topnav">
-				<a  class="active" href="index.html">Home</a>
+				<a   href="index.html">Home</a>
 				<a  href="about_me.html"> About me</a>
 				<a 	href="exps.html"> Experiments</a>
-				<a 	href="design.html"> Apparatus design</a>
+				<a 	class="active" href="design.html"> Apparatus design</a>
 				<a 	href="control.html"> Interfacing and control</a>
 			</div>
 			<div>
