--- a/exps.html
+++ b/exps.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Chris Harbord</title>
+		<title>Chris Harbord | Experiments</title>
 		<link href="StyleSheet.css" rel="stylesheet">
 		<body style="background-color:#000;">
 	</head>
@@ -13,10 +13,8 @@
 			<a  href="index.html">Home</a>
 			<a  href="about_me.html"> About me</a>
 			<a 	class="active" href="exps.html"> Experiments</a>
-			<a 	href="#friction"> Fault friction</a>
-			<a 	href="#design"> Apparatus design</a>
-			<a 	href="#daq"> Data acquisition</a>
-			<a 	href="#control"> Interfacing and control</a>
+			<a 	href="design.html"> Apparatus design</a>
+			<a 	href="control.html"> Interfacing and control</a>
 		</div>
 		<div>
 			<h2>Triaxial deformation tests</h2>
