--- a/about_me.html
+++ b/about_me.html
@@ -10,13 +10,11 @@
 		<h1>Chris Harbord</h1>
 		<h2>Experimental rock deformation</h2>
 		<div class="topnav">
-			<a  href="index.html">Home</a>
-			<a class="active" href="about_me.html"> About me</a>
-			<a href="#exp"> Experiments</a>
-			<a href="#friction"> Fault friction</a>
-			<a href="#design"> Apparatus design</a>
-			<a href="#daq"> Data acquisition</a>
-			<a href="#control"> Interfacing and control</a>
+			<a   href="index.html">Home</a>
+			<a  href="about_me.html"> About me</a>
+			<a 	href="exps.html"> Experiments</a>
+			<a 	class="active" href="design.html"> Apparatus design</a>
+			<a 	href="control.html"> Interfacing and control</a>
 		</div>
 		<div><ul>
 			<li>2010-2014 Geology MESci, University of Liverpool </li>
