--- a/about_me.html
+++ b/about_me.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Chris Harbord</title>
+		<title>Chris Harbord | About</title>
 		<link href="StyleSheet.css" rel="stylesheet">
 		<body style="background-color:#000;">
 	</head>
@@ -10,19 +10,20 @@
 		<h1>Chris Harbord</h1>
 		<h2>Experimental rock deformation</h2>
 		<div class="topnav">
-			<a   href="index.html">Home</a>
-			<a  href="about_me.html"> About me</a>
+			<a  href="index.html">Home</a>
+			<a  class="active" href="about_me.html"> About me</a>
 			<a 	href="exps.html"> Experiments</a>
-			<a 	class="active" href="design.html"> Apparatus design</a>
+			<a 	href="design.html"> Apparatus design</a>
 			<a 	href="control.html"> Interfacing and control</a>
 		</div>
+		<img src="Images/pers_pic.jpg" style="width:290px;height:200px;">
+		<img src="Images/selfie.png" style="width:200px;height:200px;">
 		<div><ul>
 			<li>2010-2014 Geology MESci, University of Liverpool </li>
 			<li>2014-2018 PhD, University of Durham </li>
 			<li>2018-2020 Postdoc, INGV Roma </li>
 			<li>2020-present, Postdoc, UCL </li>
 		</ul>
-		<img src="pers_pic.jpg" style="width:200px;height:140px;">
 	</div>
 			<p>
 				Research interests:
