--- a/exps.html
+++ b/exps.html
@@ -17,7 +17,38 @@
 			<a 	href="control.html"> Interfacing and control</a>
 		</div>
 		<div>
+			<p> Some machines I have worked with in my career to date. </p>
 			<h2>Triaxial deformation tests</h2>
+			<div>
+				<h3>Oil medium apparatus</h3>
+				<p style="float:left;"><img src="Images/triax.jpg" style="width:300px;height:400px;border:1px;">
+				<p>
+					Triaxial deformation apparatus hosted at the University of Durham, UK.
+					Capable of deforming 20 mm diameter rock samples at hydrothermal conditions, P<sub>c</sub> &le;200 MPa, P<sub>f</sub> &le;150 MPa, T &le;200&deg;C and a maximum load of 200 kN (=636 MPa).
+					I used this apparatus to investigate the role of roughness in fault friction, and the strength of serpentine gouges.
+				</p>
+			</div>
+			<div style="clear: left;">
+				<h3>Gas medium apparatus</h3>
+				<p style="float:left;"><img src="Images/murrell.jpg" style="width:300px;height:400px;">
+				<p>
+					Argon medium triaxial hosted at UCL, UK.
+					Capable of deforming 10 mm diameter samples at high pressure, high temperature conditions, P<sub>c</sub> &le;1 GPa, P<sub>f</sub> &le;0.7 GPa, T &le;1000&deg;C and a maximum load of 200 kN (=2.55 GPa).
+					I am currently using this apparatus to investigate semi-brittle rheology in marbles and measure changes in acoustic velocity during deformation.
+				</p>
+			</div>
+			<div style="clear: left">
+				<h2>Rotary shear experiments</h2>
+				<div>
+					<h3>SHIVA</h3>
+						<p style="float:left"><img src="Images/shiva.jpg" style="width:400px;height:300px;">
+						<p>
+							Rotary shear apparatus hosted at INGV, Rome, Italy.
+							Capable of deforming annular samples of up to 50 mm diameter at high sliding velocity, V &le;8 m s<sup>-1</sup>, &sigma;<sub>n</sub> &le;50 MPa and P<sub>f</sub> &le;20 MPa.
+							I implemented a new velocity control program in order to investigate the role of velocity history during earthquake slip.
+						</p>
+				</div>
+			</div>
 		</div>
 	</body>
 	</html>
