--- a/exps.html
+++ b/exps.html
@@ -18,9 +18,8 @@
 		</div>
 		<div>
 			<p> Some machines I have worked with in my career to date. </p>
-			<h2>Triaxial deformation tests</h2>
 			<div>
-				<h3>Oil medium apparatus</h3>
+				<h3>Oil medium triaxial apparatus</h3>
 				<p style="float:left;"><img src="Images/triax.jpg" style="width:300px;height:400px;border:1px;">
 				<p>
 					Triaxial deformation apparatus hosted at the University of Durham, UK.
@@ -31,22 +30,27 @@
 			<div style="clear: left;">
 				<h3>Gas medium apparatus</h3>
 				<p style="float:left;"><img src="Images/murrell.jpg" style="width:300px;height:400px;">
+				<p style="float:right;"><img src="Images/rig_overview.png" style="width:300px;height:400px;">
 				<p>
 					Argon medium triaxial hosted at UCL, UK.
 					Capable of deforming 10 mm diameter samples at high pressure, high temperature conditions, P<sub>c</sub> &le;1 GPa, P<sub>f</sub> &le;0.7 GPa, T &le;1000&deg;C and a maximum load of 200 kN (=2.55 GPa).
-					I am currently using this apparatus to investigate semi-brittle rheology in marbles and measure changes in acoustic velocity during deformation.
+					I am currently using this apparatus to investigate semi-brittle rheology in marbles and associated changes in acoustic velocity.
 				</p>
+
 			</div>
 			<div style="clear: left">
-				<h2>Rotary shear experiments</h2>
 				<div>
 					<h3>SHIVA</h3>
-						<p style="float:left"><img src="Images/shiva.jpg" style="width:400px;height:300px;">
+						<p style="float:left"><img src="Images/shiva.jpg" style="width:600px;height:400px;">
 						<p>
 							Rotary shear apparatus hosted at INGV, Rome, Italy.
 							Capable of deforming annular samples of up to 50 mm diameter at high sliding velocity, V &le;8 m s<sup>-1</sup>, &sigma;<sub>n</sub> &le;50 MPa and P<sub>f</sub> &le;20 MPa.
-							I implemented a new velocity control program in order to investigate the role of velocity history during earthquake slip.
+							I implemented a new velocity control program in order to investigate the role of velocity history on strength evolution during earthquakes (see below figure).
 						</p>
+						<img src="Images/Figure_2_exp_data.png", style="width:600px;height:300px;">
+				</div>
+				<div style="clear:left">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/8PXqO1blB1g?controls=0" title="Experiment with variable velocity history" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
