--- a/about_me.html
+++ b/about_me.html
@@ -31,6 +31,7 @@
 					<li> The rheology of rocks </li>
 					<li> Microstructures of deformed rock </li>
 					<li> Design, construction and operation of deformation apparatus </li>
+					<li> Fault friction and earthquake physics </li>
 				</ul>
 		</p>
 	</body>
