--- a/control.html
+++ b/control.html
@@ -18,7 +18,13 @@
 			</div>
 			<div>
 				<p>
-					Welcome to charbord.com a website where you can view the research activities of Chris Harbord, postdoctoral researcher within the UCL Rock Physics group.
+					A large part of my research involves the development of control software and code to increase the information that can be obtained from an experiment.
+					Some activities:
+					<ul>
+						<li> Developed a control interface for both motors used to drive SHIVA (300 and 15 kW), and set-up control of new axial load piston (<a href="exps.html">see here</a>)</li>
+						<li> <a href=https://github.com/chrisharb/MATHS_v1.00>MATHSdaq</a>, a MATLAB gui interface to acquire data using TiePie handyscopes  </li>
+						<li> Qdaq, a MATLAB interface to acquire attenuation measurements and perform live data reduction </li>
+						
 				</p>
 			</div>
 		</body>
