--- a/design.html
+++ b/design.html
@@ -18,7 +18,10 @@
 			</div>
 			<div>
 				<p>
-					Welcome to charbord.com a website where you can view the research activities of Chris Harbord, postdoctoral researcher within the UCL Rock Physics group.
+					A lot of my research work involves the design of new parts.
+					In particular I like integrating new materials into my research work that allow access to new experimental conditions e.g. superalloys or novel ceramics.
+					I am also interested in designing parts that improve exisiting methods e.g. internal load cell, or probe physical properties of rock e.g. acoustic velocity.
+					I am familiar with Inventor and have experience designing high pressure components.
 				</p>
 			</div>
 		</body>
